# SCAF

./: README.md  REPORT_SCAF_v3_PHASE_ABC.md  SCAF_Financial_Forecasting.ipynb  SCAF_Financial_Forecasting_executed.ipynb  compte-rendu.md  pyproject.toml  rapport_ultra_think_scaf_ls.md  requirements.txt  scaf 21-02-2026.ipynb
07-04-2026/: compte-rendu.md  lightgbm_corrections.md  rapport_ultra_think_complet.md
07-04-2026/agents/: architecture_review.py  ensemble_optimization.py  framework.py
07-04-2026/analysis/: __init__.py  importance.py  stats.py  validation_report.py  visualizer.py
07-04-2026/benchmark/: __init__.py  strategies.py
07-04-2026/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
07-04-2026/dashboard/: __init__.py  app.py
07-04-2026/data/: __init__.py  download_data.py  engineer.py  loader.py
RapportMd/: ANALYSE_PROJET_SCAF_V3.md  CONCORDANCE_ABSTRACT_VS_IMPLEMENTATION.md  DEPENDENCIES_README.md  generate_charts.py  generate_report_pdf.py  rapport_scaf_ls_complet.md  run_backtest.py  run_baselines_ci.py  run_option_c.py  run_scaf_v3.py  run_scaf_v3_ablation.py  run_scaf_v3_walkforward.py  run_scaf_v4.py
paper/: abstract_scaf_v4.md  abstract_scaf_v4_fr.md  abstract_scaf_v5_fr.md  section_1_introduction.md  section_2_related_work.md  section_3_architecture.md  section_4_tcca.md  section_6_conclusion.md  section_resultats_commentaires.md
results/: qlearning_qtable.json
tests/: test_benchmark_strategies.py  test_models_base.py  test_models_conformal.py  test_models_qlearning.py  test_models_sklearn.py
(+82 files in other folders)
