[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "scaf-ls"
version = "0.1.0"
description = "Scalable Cross-Asset Forecasting — Long/Short (SCAF-LS)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["finance", "forecasting", "machine-learning", "trading"]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.3.0",
    "optuna>=2.10.0",
    "shap>=0.40.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "psutil>=5.8.0",
    "joblib>=1.1.0",
    "tqdm>=4.62.0",
    "requests>=2.25.0",
    "streamlit>=1.10.0",
]

[project.optional-dependencies]
torch = ["torch>=1.12.0"]
monitoring = ["prometheus-client>=0.12.0", "python-json-logger>=2.0.0"]
data = ["yfinance>=0.2.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
all = [
    "torch>=1.12.0",
    "prometheus-client>=0.12.0",
    "python-json-logger>=2.0.0",
    "yfinance>=0.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["07-04-2026"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["07-04-2026"]
omit = ["*/tests/*", "*/__pycache__/*"]
